<resources>
    <string name="app_name">MyGym</string>
    <string name="training">TRENING</string>
    <string name="diet">PREHRANA</string>
    <string name="track_weight">PRAĆENJE KILAŽE</string>
    <string name="track_steps">PRAĆENJE KORAKA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="goal">CILJ:</string>
    <string name="calories">UNEŠENE KALORIJE:</string>
    <string name="calories_left">PREOSTALO KALORIJA:</string>
    <string name="calories_input">UNESI KALORIJE</string>
    <string name="submit">Submit</string>
    <string name="calculate_bmi">IZRAČUNAJ BMI</string>
    <string name="reach_goal">PREOSTALO DO CILJA:</string>
    <string name="current_weight">TRENUTNA KILAŽA:</string>
    <string name="weight">KILAŽA</string>
    <string-array name="exercise">
        <item>Chest</item>
        <item>Biceps</item>
        <item>Back</item>
        <item>Legs</item>
        <item>Triceps</item>
        <item>Core</item>
        <item>Rest day</item>
    </string-array>
    <string-array name="chest">
        <item>Barbell Bench Press</item>
        <item>Dumbbell Bench Press</item>
        <item>Incline Bench Press</item>
        <item>Machine Chest Press</item>
        <item>Push-Up</item>
        <item>Dip</item>
    </string-array>
    <string-array name="biceps">
        <item>Barbell Curl</item>
        <item>Chin-Up</item>
        <item>Hammer Curl</item>
        <item>Cable Burl</item>
        <item>Incline Dumbbell Curl</item>
        <item>Pull-Up</item>
    </string-array>
    <string-array name="back">
        <item>Lat Pulldown</item>
        <item>Back Extension</item>
        <item>Suspended Row</item>
        <item>Single-Arm Dumbbell Row</item>
        <item>Wide dumbbell bent-over row</item>
        <item>Barbell deadlift</item>
    </string-array>
    <string-array name="leg">
        <item>Back Squat</item>
        <item>Front Squat</item>
        <item>Romanian Deadlift</item>
        <item>Waling lunges</item>
        <item>Goblet squat</item>
        <item>Bulgarian split squat</item>
    </string-array>
    <string-array name="triceps">
        <item>Diamond Push-Ups</item>
        <item>Triceps Kickbacks</item>
        <item>Triceps Dips</item>
        <item>Overhead Triceps Extensions</item>
        <item>Rope Pushdowns</item>
        <item>Lying Triceps Extensions</item>
    </string-array>
    <string-array name="core">
        <item>HOLLOWMAN</item>
        <item>HIGH PLANK</item>
        <item>V-UPS</item>
        <item>PLANK KNEE CROSSES</item>
        <item>LEG RAISES</item>
        <item>LOW PLANK</item>
    </string-array>
    <string-array name="empty">
    </string-array>
</resources>