<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/btnTraining"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/training"
        app:layout_constraintBottom_toTopOf="@+id/btnDiet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".07"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:layout_constraintWidth_percent=".7"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/btnDiet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/diet"
        app:layout_constraintBottom_toTopOf="@+id/btnWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".07"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTraining"
        app:layout_constraintWidth_percent=".7"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/btnWeight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/track_weight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".07"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDiet"
        app:layout_constraintWidth_percent=".7"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        />

</androidx.constraintlayout.widget.ConstraintLayout>